# plancklens

./: .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.txt  MANIFEST.in  PL2018_example_TTmod.ipynb  README.md  README.rst  build_extensions.py  pyproject.toml  quickstart_QE.ipynb  requirements.txt  setup.py  setup_nofortran.py
doc/: qresp.tex
docs/: bandpowers.rst  conf.py  filt.rst  filt_cinv.rst  filt_simple.rst  filt_util.rst  index.rst  maps.rst  n0.rst  n1.rst  patchy.rst  planck2018_sims.rst  qecl.rst  qest.rst  qresp.rst  sims.rst
examples/: N0s.py  example_1_filtering.py  example_2_qlms.py  example_3_qcls.py  example_filtering.py  example_qlms.py  lensingrec_quickstart.ipynb  plot_noiselevels.py  quickstart_QE.ipynb  run_qlms.py
params/: anisofilt_example.py  idealized_example.py  idealized_example_wapomask.py  idealized_wapomask_example.py  smicadx12_planck2018.py
plancklens/: bandpowers.py  freq_weighting.py  n0s.py  nhl.py  qecl.py  qest.py  qresp.py  shts.py  utils.py  utils_qe.py  utils_spin.py
plancklens/data/cls/: FFP10_wdipole_params.ini
plancklens/filt/: filt_cinv.py  filt_simple.py  filt_util.py
plancklens/helpers/: cachers.py  mpi.py  sql.py
plancklens/n1/: __init__.py  n1.py  n1_weave.py  n1f.f90
plancklens/patchy/: patchy.py
plancklens/qcinv/: cd_solve.py  dense.py  multigrid.py  opfilt_kk.py  opfilt_pp.py  opfilt_tp.py  opfilt_tt.py  template_removal.py  util.py  util_alm.py
plancklens/sims/: cmbs.py  maps.py  phas.py  planck2018_sims.py  utils.py
plancklens/wigners/: __init__.py  gaujac.py  gauleg.py  wigners.f90
plancklens2018/: bandpowers.py  filt.py  likelihood.py  mpi.py  n1.py  nhl.py  qecl.py  qest.py  qresp.py  sql.py  utils.py  utils_qe.py  utils_spin.py
plancklens2018/filt/: filt_cinv.py  filt_simple.py  filt_util.py
plancklens2018/helpers/: mpi.py  sql.py
plancklens2018/n1/: n1.py  n1_weave.py  n1f.f90
plancklens2018/qcinv/: cd_monitors.py  cd_solve.py  dense.py  multigrid.py  opfilt_pp.py  opfilt_tt.py  template_removal.py  util.py  util_alm.py
plancklens2018/sims/: cmbs.py  maps.py  phas.py  planck2018_sims.py  utils.py
plancklens2018/wigners/: gaujac.py  wigners.f90
tests/: test_w.py
tutorial/: crosscorr_flask.ipynb  lensing_tutorial.ipynb  tuto_QE.ipynb  tuto_lensmap.ipynb  tutorial.ipynb
